	unless --no-lock is specified.


UTILITIES

    o	R CMD check has a new argument --extra-arch to confine tests
	to those needed to check an additional sub-architecture.

    o	R CMD Rd2dvi makes use of tools::texi2dvi to process the
	package manual.

    o	There is an R-based version of R CMD build.  The Perl-based
	version is, for now, still available as R CMD obuild.


C-LEVEL FACILITIES

    o	lang5() and lang6() {in addition to pre-existing lang[1-4]()}
	convenience functions for easier construction of eval() calls.
	If you have your own definition, do wrap it inside
	'#ifndef lang5 .... #endif' to keep it working with old and new R.

    o	Header R.h now includes only the C headers it itself needs,
	hence no longer includes errno.h.  (This helps avoid problems
	when it is included from C++ source files.)

    o	Headers Rinternals.h and R_ext/Print.h include the C++
	versions of stdio.h and stdarg.h respectively if included from
	a C++ source file.


INSTALLATION

    o	A C99 compiler is now required, and more C99 language features
	will be used in the R sources.

    o	Tcl/Tk >= 8.4 is now required (increased from 8.3).

    o	The output of the examples from several of the base packages
	is now compared to reference output rather than the previous
	output (if any).

    o	zlib has been updated to 1.2.4: this is also the minimum
	version required for --with-system-zlib.


BUG FIXES

    o	Calls to selectMethod() by default no longer cache inherited
	methods.  This could previously corrupt methods used by as().

    o	The densities of non-central chi-squared are now more accurate
	in some cases in the extreme tails, e.g. dchisq(2000, 2,
	1000), as a series expansion was truncated too early.
	(PR#14105)

    o	pt() is more accurate in the left tail for ncp large, e.g.
	pt(-1000, 3, 200).  (PR#14069)

    o	The default C code (R_binary) for binary ops now sets the S4
	bit in the result if either argument is an S4 object. (PR#13209)
